--- a/scss/config.scss
+++ b/scss/config.scss
@@ -1,1 +1,16 @@
 // TODO stillingar hér
+// breytur fyrir mikið notaðar stærðir
+$max-width: 1200px;
+$gutter: 20px;
+
+$font-main: 'Open Sans', helvetica, arial, sans-serif;
+$font-heading: 'Oswald', verdana, serif;
+
+// mixin sem reiknar nákvæmar prósentur útfrá dálkum
+@mixin columns($col: 1) {
+  // margföldum með "1%" til að breyta gildi í prósentu gildi
+  width: ($col / 12 * 100) * 1%;
+
+  padding-right: $gutter / 2;
+  padding-left: $gutter / 2;
+}
