--- a/styles.scss
+++ b/styles.scss
@@ -21,4 +21,5 @@ html { /* stylelint-disable-line */
 
 
 // TODO sækja allar sass skrár
-//@import "scss/...";
+@import 'scss/header';
+@import 'scss/footer';
