--- a/scss/header.scss
+++ b/scss/header.scss
@@ -31,7 +31,7 @@
   }
 
   &__col {
-    @include columns(4);
+    @include columns(6);
 
     text-align: center;
 
@@ -50,24 +50,25 @@
 
   &__list{
     display: flex;
-    justify-content: center;
     a {
       text-decoration: none;
       color: #000000;
+    }
+
+    &__center{
+      justify-content: center;
+    }
+    &__right {
+      justify-content: flex-end;
     }
   }
 
   &__item{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     margin: 10px;
     font-size: 1rem;
 
-    &--button{
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
+    &__button{
       margin: 10px;
       font-size: 1rem;
 
