--- a/styles.scss
+++ b/styles.scss
@@ -23,3 +23,5 @@ html { /* stylelint-disable-line */
 // TODO sækja allar sass skrár
 @import 'scss/header';
 @import 'scss/footer';
+@import 'scss/front';
+@import 'scss/button';
