Footer lagaður, bætt við hover

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -42,6 +42,11 @@
     text-decoration: none;
     list-style: none;
   }
+  &__link:hover {
+    color: #000000;
+    text-decoration: none;
+    list-style: none;
+  }
 
   &__copyright {
     width: 100%;
