--- a/scss/staff.scss
+++ b/scss/staff.scss
@@ -3,68 +3,68 @@
 .staff {
   position: relative;
   margin: 10px;
-}
 
-&__row {
-  display: flex;
-  flex-flow: row wrap;
-  max-width: 1220px;
-  margin: 0 auto;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-&__col {
-  width: 100%;
-  padding: 10px;
-  @media (min-width: 700px) {
-    width: 50%;
+  &__row {
+    display: flex;
+    flex-flow: row wrap;
+    max-width: 1220px;
+    margin: 0 auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 
-  &__card {
+  &__col {
     width: 100%;
-    height: 100%;
-    transition: transform 0.2s linear;
-    transform-style: preserve-3d;
-  }
+    padding: 10px;
+    @media (min-width: 700px) {
+      width: 50%;
+    }
 
-  &:hover .staff__card {
-    transform: rotateY(180deg);
-  }
+    &__card {
+      width: 100%;
+      height: 100%;
+      transition: transform 0.2s linear;
+      transform-style: preserve-3d;
+    }
 
-  .front {
-    position: absolute;
-    width: 100%;
-    backface-visibility: hidden;
-  }
+    &__card:hover {
+      transform: rotateY(180deg);
+    }
 
-  .karolina {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-  }
+    &__front {
+      position: absolute;
+      width: 100%;
+      backface-visibility: hidden;
+    }
 
-  .back {
-    display: block;
-    transform: rotateY(180deg);
-  }
+    &__karolina {
+      position: relative;
+      display: inline-block;
+      width: 100%;
+    }
 
-  .tomas {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-  }
+    &__back {
+      display: block;
+      transform: rotateY(180deg);
+    }
 
-  .anna {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-  }
+    &__tomas {
+      position: relative;
+      display: inline-block;
+      width: 100%;
+    }
 
-  .jon {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
+    &__anna {
+      position: relative;
+      display: inline-block;
+      width: 100%;
+    }
+
+    &__jon {
+      position: relative;
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+    }
   }
 }
